--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ MyShow/MyShow.sln
 MyShow/.vs/MyShow/v15/ipch/dc41080472ee3f0a.ipch
 MyShow/.vs/MyShow/v15/Browse.VC.opendb
 MyShow/.vs/MyShow/v15/Browse.VC.db
+MyShow/.vs/MyShow/v15/ipch/AutoPCH/9bc218f5536c0d40/MYSHOW.ipch
